# polkadot-sdk-solochain-template

./: Cargo.toml
hotstuff/: README.md
hotstuff/consensus/: Cargo.toml
hotstuff/consensus/src/: config.rs  consensus.rs  import.rs  network.rs
hotstuff/pallets/hotstuff/: Cargo.toml
hotstuff/pallets/hotstuff/src/: weights.rs
hotstuff/primitives/: Cargo.toml
