[package]
name = "hotstuff-consensus"
version = "0.1.0"
edition = "2021"

[dependencies]
log = { version = "0.4" }
scale-info = { workspace = true, default-features = false, features = ["derive"] }
serde = { workspace = true, features = ["derive"] }
parity-scale-codec = { workspace = true, features = ["derive"] }
async-recursion = "1.0.0"
array-bytes = "6.1"
futures.workspace = true
tokio = { version = "1.22.0", features = ["rt", "time", "macros", "sync"] }
async-trait = "0.1.57"
parking_lot = "0.12.1"

sc-basic-authorship.workspace = true
sc-utils.workspace = true
sc-telemetry.workspace = true
sc-client-api.workspace = true
sc-consensus.workspace = true
sc-consensus-slots.workspace = true
sc-network.workspace = true
sc-network-gossip.workspace = true
sc-chain-spec.workspace = true
sc-service.workspace = true
sc-network-sync.workspace = true


sp-blockchain.workspace = true
sp-inherents.workspace = true
sp-core.workspace = true
sp-application-crypto.workspace = true
sp-keyring.workspace = true
sp-consensus.default-features = false
sp-api.workspace = true
sp-runtime.workspace = true
sp-keystore.workspace = true
hotstuff-primitives = { path="../primitives" }

[dev-dependencies]
tempfile = "3.8.0"

sc-keystore.workspace = true
sc-transaction-pool.workspace = true
sc-network-test.workspace = true
sp-tracing.workspace = true
substrate-test-runtime-client.workspace = true
substrate-test-runtime.workspace = true

