[package]
name = "hotstuff-primitives"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = { version = "0.1.57", optional = true }
codec = { workspace = true, default-features = false }
scale-info = { workspace = true, default-features = false, features = ["derive"] }
sp-api = { workspace = true,  default-features = false }
sp-application-crypto = { workspace = true,  default-features = false }
sp-consensus-slots = { workspace = true,  default-features = false }
sp-inherents = { workspace = true,  default-features = false }
sp-runtime = { workspace = true,  default-features = false }
sp-std = { workspace = true,  default-features = false }
sp-timestamp = { workspace = true,  default-features = false }
sp-core = { workspace = true,  default-features = false }

[features]
default = ["std"]
std = [
	"async-trait",
	"codec/std",
	"scale-info/std",
	"sp-api/std",
	"sp-application-crypto/std",
	"sp-consensus-slots/std",
	"sp-inherents/std",
	"sp-runtime/std",
	"sp-std/std",
	"sp-timestamp/std",
]

