[package]
name = "pallet-hotstuff"
version = "0.1.0"
description = "FRAME pallet template for defining custom runtime logic."
edition = "2021"
license = "MIT-0"
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { workspace = true, default-features = false, features = [
	"derive",
] }
log = { version = "0.4.17", default-features = false }
scale-info = { workspace = true, default-features = false, features = ["derive"] }
frame-benchmarking.default-features = false
frame-support.default-features = false
frame-system.default-features = false
sp-runtime.default-features = false
sp-std.default-features = false
pallet-timestamp.default-features = false
hotstuff-primitives = { default-features = false, path="../../primitives" }

[dev-dependencies]
sp-core.default-features = false
sp-io.default-features = false
sp-runtime.default-features = false

[features]
default = ["std"]
std = [
	"codec/std",
	"log/std",
	"frame-benchmarking?/std",
	"frame-support/std",
	"pallet-timestamp/std",
	"frame-system/std",
	"scale-info/std",
	"sp-runtime/std",
	"sp-std/std",
]
runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks"]
try-runtime = ["frame-support/try-runtime"]
